updated giau to 0.9.2
