# giau/swagger.json
@@ -1,7 +1,7 @@
 {
   "swagger": "2.0",
   "info": {
-    "version": "0.9.1",
+    "version": "0.9.2",
     "title": "GIAU (knowledGe for blockchaIn Applications and Utilties) API",
     "description": "A service to store experiments for the GIAU API"
   },
@@ -291,6 +291,39 @@
         }
       }
     },
+    "/experimentsOfDeploymentPattern": {
+      "post": {
+        "tags": [
+          "Blockchain Benchmark DaaS"
+        ],
+        "summary": "Recommend Topology, which achieved the best Benchmarks, according to priorities of quality attributes.",
+        "parameters": [
+          {
+            "name": "Structure",
+            "in": "body",
+            "required": true,
+            "description": "Structure for which we want to find benchmarks",
+            "schema": {
+              "$ref": "#/definitions/PureNode"
+            }
+          }
+        ],
+        "consumes": [
+          "application/json"
+        ],
+        "produces": [
+          "application/json"
+        ],
+        "responses": {
+          "200": {
+            "description": "Experiments associated with the structure",
+            "schema": {
+              "$ref": "#/definitions/Experiment"
+            }
+          }
+        }
+      }
+    },
     "/dep_pattern": {
       "post": {
         "tags": [
@@ -415,6 +448,14 @@
               "type": "integer"
             },
             "description": "The priority of infrastructure resource utilization quality attribute"
+          },
+          {
+            "in": "query",
+            "name": "returnBenchmarks",
+            "schema": {
+              "type": "boolean"
+            },
+            "description": "Indicates whether benchmarks should be returned with the topology"
           },
           {
             "name": "Structure",
